--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,17 @@
 plugins {
     id 'idea'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-group 'ru.hse.grpc'
+group 'ru.hse.rabbitmq'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 11
+
+javafx {
+    version = "14"
+    modules = [ 'javafx.controls' ]
+}
 
 repositories {
     mavenCentral()
