--- a/build.gradle
+++ b/build.gradle
@@ -24,4 +24,5 @@ run {
 
 dependencies {
     compile 'javax.annotation:javax.annotation-api:1.3.1'
+    compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.9.0'
 }
