--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,8 @@ dependencies {
     compile 'javax.annotation:javax.annotation-api:1.3.1'
     compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.9.0'
 }
+
+application {
+    mainClassName = 'ru.hse.rabbitmq.Main'
+}
+
