--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ run {
 dependencies {
     compile 'javax.annotation:javax.annotation-api:1.3.1'
     compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.9.0'
+    compile 'org.apache.cassandra:cassandra-all:0.8.1'
 }
 
 application {
