--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     compile 'javax.annotation:javax.annotation-api:1.3.1'
     compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.9.0'
     compile 'org.apache.cassandra:cassandra-all:0.8.1'
+    compile "ch.qos.logback:logback-classic:1.2.3"
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
 }
 
 application {
